--- a/style.css
+++ b/style.css
@@ -42,7 +42,6 @@ header {
   list-style: none;
   background: black;
   display: flex;
-
   flex-direction: column;
   transform: translateY(-100%);
   transition: 0.2s ease;
@@ -60,6 +59,40 @@ header {
   cursor: pointer;
   top: 2rem;
   left: 2rem;
+}
+
+article {
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 5px;
+  display: block;
+  position: absolute;
+  top: 80px;
+  right: 0;
+}
+
+.container_main {
+  display: grid;
+  grid-template-columns: 2fr 2fr;
+  grid-template-rows: 2fr;
+}
+
+.container_card {
+  grid-column: 2;
+  grid-row: 1;
+}
+
+.container_article {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+img {
+  border-radius: 5px 5px 0 0;
+  width: 300px;
 }
 
 @media (max-width: 671.98px) {
