--- a/style.css
+++ b/style.css
@@ -1,106 +1,70 @@
-/* Style the list */
-ul.breadcrumb {
-  padding: 10px 16px;
-  list-style: none;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Times New Roman", Times, serif;
 }
 
-/* Disply list items side by side */
+body {
+  background-color: #f5f6fa;
+}
 
-ul.breadcrumb li {
-  display: inline;
-  font-size: 18px;
+a {
+  text-decoration: none;
 }
-.logo {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 20%;
-}
+
 header {
-  background-color: rgb(0, 0, 112);
-  padding-top: 20px;
-}
-.hamburger {
-  position: fixed;
-  z-index: 99;
-  background: rgb(0, 0, 112);
-  border: none;
-  cursor: pointer;
-  top: 1rem;
-  left: 1rem;
-}
-
-.menu {
-  position: fixed;
-  z-index: 100;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
   width: 100%;
-  height: 100vh;
-  list-style: none;
-  background: black;
+  height: 62px;
+  background-color: #071c2e;
+  color: #fff;
   display: flex;
-  flex-direction: column;
-  transform: translateY(-100%);
-  transition: 0.2s ease;
+  align-items: center;
+  justify-content: space-between;
 }
-.menu:target {
-  transform: translateY(0);
-}
-.navbar {
-  will-change: transform;
-}
-.close {
-  position: absolute;
-  border: none;
+
+header img {
   color: white;
-  cursor: pointer;
-  top: 2rem;
-  left: 2rem;
+  background-color: transparent;
+  height: 20px;
+  width: auto;
+  padding-right: 20px;
 }
 
-article {
-}
-
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-  border-radius: 5px;
-  display: block;
+.nav_bar ul {
+  display: flex;
+  align-items: center;
+  font-size: 1.2rem;
+  list-style: none;
+  float: none;
   position: absolute;
-  top: 80px;
-  right: 0;
-}
-
-.container_main {
-  display: grid;
-  grid-template-columns: 2fr 2fr;
-  grid-template-rows: 2fr;
-}
-
-hr {
-  width: 200px;
-}
-.container_card {
-  grid-column: 2;
-  grid-row: 1;
-}
-
-.container_article {
-  grid-column: 1;
-  grid-row: 1;
+  left: 25%;
+  transform: translate(-50%, -50%);
 }
 
 img {
-  border-radius: 5px 5px 0 0;
-  width: 300px;
+  width: 200px;
 }
 
-@media (max-width: 671.98px) {
-  .logo {
-    height: 18px;
-    padding-right: 10px;
-  }
+.nav_bar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-left: 1rem;
+  gap: 2rem;
+}
+
+.nav_bar_right {
+  display: flex;
+  align-items: center;
+  margin-right: 1.2rem;
+  gap: 1rem;
+}
+
+.sub_button {
+  background-color: #973100;
+  color: #fff;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 7px;
 }
